--- a/package.json
+++ b/package.json
@@ -22,21 +22,27 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/android-permissions": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/diagnostic": "^5.19.1",
     "@ionic-native/facebook": "^5.16.0",
     "@ionic-native/geolocation": "^5.16.0",
     "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/google-plus": "^5.16.0",
+    "@ionic-native/http": "^5.20.0",
     "@ionic-native/location-accuracy": "^5.16.0",
     "@ionic-native/native-geocoder": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.7.1",
+    "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "animate.css": "^3.7.2",
     "cordova-android": "8.1.0",
+    "cordova-browser": "6.0.0",
+    "cordova-ios": "5.1.1",
+    "cordova-plugin-advanced-http": "^2.4.0",
     "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^6.2.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-gaodelocation-chenyu": "^2.0.3",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
@@ -49,9 +55,11 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^3.4.0",
+    "cordova.plugins.diagnostic": "^5.0.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
+    "underscore": "^1.9.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -112,6 +120,12 @@
         "API_KEY_FOR_ANDROID": "AIzaSyBY53tJk24gzg3TUwPBNRprog_zfacR9EE",
         "PLAY_SERVICES_VERSION": "15.0.1",
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova.plugins.diagnostic": {
+        "ANDROID_SUPPORT_VERSION": "28.+"
+      },
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
       }
     },
     "platforms": [
