--- a/package.json
+++ b/package.json
@@ -20,45 +20,45 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/android-permissions": "^5.16.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/diagnostic": "^5.19.1",
-    "@ionic-native/facebook": "^5.16.0",
-    "@ionic-native/geolocation": "^5.16.0",
+    "@ionic-native/android-permissions": "^5.21.6",
+    "@ionic-native/core": "^5.21.6",
+    "@ionic-native/diagnostic": "^5.21.6",
+    "@ionic-native/facebook": "^5.21.6",
+    "@ionic-native/geolocation": "^5.21.6",
     "@ionic-native/google-maps": "^5.5.0",
-    "@ionic-native/google-plus": "^5.16.0",
-    "@ionic-native/http": "^5.20.0",
-    "@ionic-native/location-accuracy": "^5.16.0",
-    "@ionic-native/native-geocoder": "^5.16.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/google-plus": "^5.21.6",
+    "@ionic-native/http": "^5.21.6",
+    "@ionic-native/location-accuracy": "^5.21.6",
+    "@ionic-native/native-geocoder": "^5.21.6",
+    "@ionic-native/splash-screen": "^5.21.6",
+    "@ionic-native/status-bar": "^5.21.6",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "animate.css": "^3.7.2",
     "cordova-android": "8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-ios": "5.1.1",
-    "cordova-plugin-advanced-http": "^2.4.0",
+    "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-android-permissions": "^1.0.2",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "^6.2.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-facebook4": "^6.3.0",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-gaodelocation-chenyu": "^2.0.3",
+    "cordova-plugin-gaodelocation-chenyu": "^2.0.4",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
-    "cordova-plugin-googleplus": "^8.2.0",
+    "cordova-plugin-googleplus": "^8.4.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-nativegeocoder": "^3.2.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^3.4.0",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "^3.4.1",
     "cordova.plugins.diagnostic": "^5.0.1",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
+    "core-js": "^2.6.11",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.0",
     "underscore": "^1.9.2",
     "zone.js": "~0.9.1"
   },
@@ -76,15 +76,15 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
